--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: Daily Journal
 subtitle: ''
 description: ''
 keywords:
-author: John Doe
-language: en
+author: Handotai
+language: ja
 timezone: ''
 
 # URL
