--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -947,7 +947,7 @@ tag:
 # About Page
 #---------------------------
 about:
-  enable: false
+  enable: true
   banner_img: /img/bg.jfif
   banner_img_height: 60
   banner_mask_alpha: 0.3
