--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: ''
 keywords:
 author: Handotai
 language: ja
-timezone: 'PST'
+timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
